[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymjc"
version = "1.0.0"
authors = [
  { name="Magne Eik Lauritzen", email="mag.lauritzen@gmail.com" },
]
description = "Minimum Jump Cost dissimilarity measure in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/nup002/pymjc"
"Bug Tracker" = "https://github.com/nup002/pymjc/issues"
